motioneye/templates/motioneye.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: motioneye-service
spec:
  selector:
    app: motioneye
  ports:
    - port: 8765
      targetPort: 8765
      protocol: TCP
  type: LoadBalancer
