motioneye/templates/motioneye.ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: motioneye-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /motioneye
        backend:
          serviceName: motioneye-service
          servicePort: 8765
